--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "0.3.1",
     "publisher": "wmaurer",
     "engines": {
-        "vscode": "^1.6.0"
+        "vscode": "^1.24.0"
     },
     "categories": [
         "Other"
@@ -99,20 +99,20 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test",
         "format": "prettier ./**/*.{ts,json} --write"
     },
     "devDependencies": {
-        "@types/bluebird": "^3.0.35",
         "@types/mocha": "^2.2.32",
         "@types/node": "^6.0.45",
-        "bluebird": "^3.4.6",
         "mocha": "^5.2.0",
         "prettier": "^1.13.5",
         "tslint": "^3.15.1",
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0"
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
     }
 }
