--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
-    "bracketSpacing": true,
-    "printWidth": 120,
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "all",
-    "useTabs": false
+    trailingComma: 'all',
+    singleQuote: true,
+    printWidth: 100,
+    tabWidth: 4,
+    arrowParens: 'always',
 }
