--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Jumpy provides fast cursor movement, inspired by Atom's package of the same name.",
     "icon": "images/jumpy-icon.png",
     "license": "MIT",
-    "version": "0.3.3",
+    "version": "0.4.0",
     "publisher": "krnik",
     "engines": {
         "vscode": "^1.24.0"
@@ -31,8 +31,7 @@
     },
     "homepage": "https://github.com/krnik/vscode-jumpy/blob/master/README.md",
     "activationEvents": [
-        "onCommand:extension.jumpy-word",
-        "onCommand:extension.jumpy-line",
+        "onCommand:extension.jumpy-enter",
         "onCommand:extension.jumpy-exit"
     ],
     "main": "./out/extension",
@@ -42,54 +41,62 @@
             {
                 "key": "shift+enter",
                 "command": "extension.jumpy-exit",
-                "when": "editorTextFocus && jumpy.isJumpyMode"
+                "when": "editorTextFocus && jumpy.isInJumpMode"
             },
             {
                 "key": "shift+enter",
-                "command": "extension.jumpy-word",
-                "when": "editorTextFocus && !jumpy.isJumpyMode"
+                "command": "extension.jumpy-enter",
+                "when": "editorTextFocus && !jumpy.isInJumpMode"
             }
         ],
         "configuration": {
             "type": "object",
             "title": "Jumpy Configuration",
             "properties": {
+                "jumpy.primaryCharset": {
+                    "type": "string",
+                    "pattern": "[a-z0-9]",
+                    "description": "Set of characters used to create jump key combinations. First letters will occur the closes to the current active line."
+                },
+                "jumpy.enableDisplaySwitch": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Controlls whether it's possible to switch marker display."
+                },
                 "jumpy.wordRegexp": {
                     "type": "string",
                     "default": "",
                     "description": "The Regexp to use to match words in Jumpy Word Mode"
                 },
-                "jumpy.lineRegexp": {
-                    "type": "string",
-                    "default": "",
-                    "description": "The Regexp to use to match empty lines in Jumpy Line Mode"
+                "jumpy.wordRegexpFlags": {
+                    "type": "string"
                 },
-                "jumpy.fontFamily": {
+                "jumpy.display.fontFamily": {
                     "type": "string",
                     "default": "",
                     "description": "Font used in Jumpy decorations, defaults to font from settings"
                 },
-                "jumpy.fontSize": {
+                "jumpy.display.fontSize": {
                     "type": "number",
                     "default": 0,
                     "description": "Font size used in Jumpy decorations, defaults to font size from settings"
                 },
-                "jumpy.darkThemeBackground": {
+                "jumpy.display.backgroundColor": {
                     "type": "string",
                     "default": "#004455",
                     "description": "Background of Jumpy decoration in dark themes"
                 },
-                "jumpy.darkThemeForeground": {
+                "jumpy.display.color": {
                     "type": "string",
                     "default": "#0af0c1",
                     "description": "Text color of Jumpy decoration in dark themes"
                 },
-                "jumpy.lightThemeBackground": {
+                "jumpy.display.lightThemeBackground": {
                     "type": "string",
                     "default": "",
                     "description": "Background of Jumpy decoration in light themes"
                 },
-                "jumpy.lightThemeForeground": {
+                "jumpy.display.lightThemeForeground": {
                     "type": "string",
                     "default": "",
                     "description": "Text color of Jumpy decoration in light themes"
