--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Jumpy provides fast cursor movement, inspired by Atom's package of the same name.",
     "icon": "images/jumpy-icon.png",
     "license": "MIT",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "publisher": "krnik",
     "engines": {
         "vscode": "^1.38.0"
@@ -89,7 +89,7 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc ",
+        "compile": "tsc -p ./tsconfig.json",
         "watch": "tsc --watch",
         "test": "npm run compile && node ./node_modules/vscode/bin/test",
         "format": "eslint --fix ./src/**/*"
@@ -97,7 +97,7 @@
     "devDependencies": {
         "@types/mocha": "5.2.7",
         "@types/node": "12.7.4",
-        "@types/vscode": "1.14.0",
+        "@types/vscode": "1.38.0",
         "@typescript-eslint/eslint-plugin": "2.2.0",
         "@typescript-eslint/parser": "2.2.0",
         "eslint": "6.3.0",
@@ -107,8 +107,5 @@
         "prettier": "1.18.2",
         "typescript": "3.6.2",
         "vscode-test": "1.2.0"
-    },
-    "dependencies": {
-        "string.prototype.matchall": "3.0.1"
     }
 }
