--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Jumpy provides fast cursor movement, inspired by Atom's package of the same name.",
     "icon": "images/jumpy-icon.png",
     "license": "MIT",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "publisher": "krnik",
     "engines": {
         "vscode": "^1.38.0"
@@ -33,6 +33,8 @@
     "activationEvents": [
         "onCommand:extension.jumpy-enter",
         "onCommand:extension.jumpy-enter-end-of-word",
+        "onCommand:extension.jumpy-enter-select",
+        "onCommand:extension.jumpy-enter-select-end-of-word",
         "onCommand:extension.jumpy-exit"
     ],
     "main": "./out/extension",
@@ -57,6 +59,26 @@
             {
                 "key": "alt+k",
                 "command": "extension.jumpy-enter-end-of-word",
+                "when": "editorTextFocus && !jumpy.isInJumpMode"
+            },
+            {
+                "key": "shift+alt+j",
+                "command": "extension.jumpy-exit",
+                "when": "editorTextFocus && jumpy.isInJumpMode"
+            },
+            {
+                "key": "shift+alt+k",
+                "command": "extension.jumpy-exit",
+                "when": "editorTextFocus && jumpy.isInJumpMode"
+            },
+            {
+                "key": "shift+alt+j",
+                "command": "extension.jumpy-enter-select",
+                "when": "editorTextFocus && !jumpy.isInJumpMode"
+            },
+            {
+                "key": "shift+alt+k",
+                "command": "extension.jumpy-enter-select-end-of-word",
                 "when": "editorTextFocus && !jumpy.isInJumpMode"
             }
         ],
