--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,10 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceRoot}"
-            ],
+            "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
             "stopOnEntry": false,
             "sourceMaps": true,
-            "outFiles": [
-                "${workspaceRoot}/out"
-            ],
-        },
+            "outFiles": ["${workspaceRoot}/out"]
+        }
     ]
 }
